--- a/report/report.tex
+++ b/report/report.tex
@@ -364,14 +364,15 @@ It can be also used to scatter a plot of selected features against each other.\\
 
 
 \section{Results}
-The application is evaluated on signals produced by described above generators (see §\ref{sec:generators}).\\
-Describe results of AP clustering --- not given.
+The application is evaluated on signals produced by described above generators (see §\ref{sec:generators}). This section is supported by an example of generated \emph{noisy sine wave} showed in \emph{Figure}~\ref{fig:signal}.\\
 
 \begin{figure}[htbp]
   \centering
   \includegraphics[width=.7\textwidth]{./gfx/feature5.png}
   \caption{Generated signal sample---noisy sine wave.\label{fig:signal}}
 \end{figure}
+
+The second step in processing is feature extraction. The sample of such features, extracted in \emph{60 seconds sliding time window}, represented by \emph{average}, \emph{standard deviation}, and \emph{5-Lag} are presented in \emph{Figure}~\ref{fig:features}.\\
 
 \begin{figure}[htbp]
   \centering
