--- a/report/report.tex
+++ b/report/report.tex
@@ -78,7 +78,8 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \usepackage[]{algorithm2e}
 \usepackage{listings}
-\definecolor{navyb}{RGB}{0100,043,054}
+\definecolor{navyb}{RGB}{100,043,054}
+\definecolor{darkgreen}{RGB}{070,155,070}
 
 \newcommand\mycommfont[1]{\footnotesize\ttfamily\textcolor{blue}{#1}}
 \newcommand{\ts}{\textsuperscript}
@@ -374,7 +375,7 @@ The application is evaluated on signals produced by described above generators (
 
 The second step in processing is feature extraction. The sample of such features, extracted in \emph{60 seconds sliding time window}, represented by \emph{average}, \emph{standard deviation}, and \emph{5-Lag} are presented in \emph{Figure}~\ref{fig:features}.\\
 
-\begin{figure}[phtbp]
+\begin{figure}[htbp]
   \centering
   \begin{subfigure}[b]{0.49\textwidth}
     \includegraphics[width=\textwidth]{./gfx/feature1-1.png}
@@ -401,10 +402,10 @@ In case of sine wave the first one could be sudden change of \emph{period} or st
 \begin{itemize}
   \item increasing---decreasing,
   \item positive---negative,
-  \item high---medium---low.
+  \item high---low.
 \end{itemize}
 
-\begin{figure}[phtbp]
+\begin{figure}[htbp]
   %add desired spacing between images, e. g. ~, \quad, \qquad, \hfill etc.
   %(or a blank line to force the subfigure onto a new line)
   \centering
@@ -419,21 +420,26 @@ In case of sine wave the first one could be sudden change of \emph{period} or st
   \end{subfigure}
 
   \begin{subfigure}[b]{0.49\textwidth}
-    \includegraphics[width=\textwidth]{./gfx/f4f5.png}
-    \caption{$5$-Lag clustering.\label{fig:Clag}}
+    \includegraphics[width=\textwidth]{./gfx/f1f2.png}
+    \caption{Average---Standard Deviation clustering.\label{fig:Cavgstd}}
   \end{subfigure}
   \hfill
   \begin{subfigure}[b]{0.49\textwidth}
-    \includegraphics[width=\textwidth]{./gfx/f1f2.png}
-    \caption{Average---Standard Deviation\label{fig:Cavgstd}}
+    \includegraphics[width=\textwidth]{./gfx/f4f5.png}
+    \caption{$5$-Lag clustering.\label{fig:Clag}}
   \end{subfigure}
+
   \caption{Signal clustering based on extracted features.\label{fig:clustering}}
 \end{figure}
 
-Lol.\\
+Sample ``fault'' clustering can be seen in \emph{Figures}~\ref{fig:Caverage},~\ref{fig:Cstandarddeviation},~and~\ref{fig:Cavgstd}. In all of these graphs we consider \emph{\textcolor{red}{red}} as ``healthy'' clusters, and \emph{\textcolor{blue}{blue}} as ``suspicious''.\\
+It suffices to say, that if new-coming points are assigned to first the system works smoothly, once stream is being shifted towards blue zone the alarm is raised.\\
+
+\emph{Figure}~\ref{fig:Clag} shows perfect signal recognition clustering, where each colour corresponds to combination of listed above signal states e.g.\ \emph{\textcolor{darkgreen}{green}} is \emph{decreasing-negative-low}.
 
 \subsection{Static clustering comparison}
-To benchmark above results I used static clustering on data repository created by one run of program. The algorithms are: ..., and ... implemented in \texttt{WEKA} machine learning package. The choice the algorithms is motivated by no need of fixing ``number of clusters'' parameter.\\
+To benchmark above results I used static clustering on data repository created by one run of program. The algorithms are: \emph{k-means}, and \emph{EM} implemented in \texttt{WEKA} machine learning package. The choice the first one is motivated by its simplicity and popularity, nevertheless it demands fixing number of clusters therefore its application in our case is not realistic. The later one does not need aforementioned parameter hence is more suitable for my approach.\\
+Algorithms is motivated by no need of fixing ``number of clusters'' parameter.\\
 
 \section{Lookahead}
 Created application scratches only surface of a broad topic of live signal analysis.\\
